improved fix with icons and hiding the scrollbar

--- a/src/assets/scss/_style.scss
+++ b/src/assets/scss/_style.scss
@@ -1197,6 +1197,12 @@ svg#closenft path {
     scrollbar-width: none;
     /* for Firefox */
     overflow-y: scroll;
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;  /* Firefox */
+
+    &::-webkit-scrollbar { 
+        display: none;  /* Safari and Chrome */
+    }
 }
 
 // .scroller::-webkit-scrollbar-track {
